[gd_scene load_steps=4 format=3 uid="uid://ckugrsb48ouyj"]

[ext_resource type="Script" path="res://soldier/captain/captain.gd" id="1_74nr5"]
[ext_resource type="PackedScene" uid="uid://c75ul6ulpjtar" path="res://shared/targeting/hit_area.tscn" id="2_0rdpd"]
[ext_resource type="Script" path="res://spells/spell.gd" id="3_6umn0"]

[node name="Captain" type="Node2D" node_paths=PackedStringArray("spell")]
script = ExtResource("1_74nr5")
hit_range = 300.0
type = 2
spell = NodePath("Spell")
color = Color(0, 0, 0, 1)
soldier_type = "Ranged"

[node name="HitArea" parent="." instance=ExtResource("2_0rdpd")]

[node name="AttackCooldownTimer" type="Timer" parent="."]

[node name="Spell" type="Node" parent="."]
script = ExtResource("3_6umn0")
target_units = true
captain_spell = true
type = 1
info = {
"damage": 100,
"targets": 1
}

[connection signal="hidden" from="." to="." method="_on_hidden"]
[connection signal="shoot" from="." to="." method="_on_shoot"]
[connection signal="updated_target_in_range" from="HitArea" to="." method="_on_hit_area_updated_target_in_range"]
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_attack_cooldown_timer_timeout"]
